--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 body {
   margin: 0;
   padding: 0;
+  background-image: url('https://images.unsplash.com/photo-1594104986935-b24e65f5bfd2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=869&q=80');
+  background-size: 100vw;
+  
 }
 
 
