--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,57 +8,72 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50vw;
-    height: 10vh;
+    width: 70vw;
+    height: 15vh;
     margin: 2vh;
     background-color: rgba(0, 0, 0, 0.462);
     box-shadow: 10px 10px 10px;
-    animation: AnimateTitle 7s linear;
+    animation: AnimateTitle 6s linear;
     animation-fill-mode: forwards;
     }
 .title{
     font-family: 'Cinzel', serif;
-    text-decoration: underline black;
-    color: rgba(255, 255, 255, 0.814);
+    color: rgba(19, 1, 1, 0.814);
     animation: AnimateText 7s linear;
     animation-fill-mode: forwards;
 
 }
+
+@media screen and (max-width: 700px) {
+  .titleContainer{
+    width: 70vw;
+    height: 10vh;
+  }
+  .title{
+    font-size: 1.4rem;
+  }
+
+
+}
+
+@media screen and (max-width: 500px) {
+  .titleContainer{
+    width: 70vw;
+    height: 8vh;
+  }
+  .title{
+    font-size: 1.1rem;
+  }
+
+
+}
+
+
+
 @keyframes AnimateTitle {
     0% {
+      background-color: rgba(0, 0, 0, 0.526);
     }
   
     45% {
-      margin-left: 25%;
+      margin-left: 17%;
       box-shadow: black 10px 10px 10px;
-      background-color: rgba(0, 0, 0, 0.336);
+      background-color: rgba(0, 0, 0, 0.363);
       color: rgb(255, 255, 255);
     
     }
     70% {
-      margin-left: 25%;
+      margin-left: 17%;
       box-shadow: black 80px 80px 80px;
-      background-color: rgba(0, 0, 0, 0.336);
+      background-color: rgba(0, 0, 0, 0.152);
       color: rgb(255, 255, 255);
     
     }
     100% {
-      margin-left: 25%;
+      margin-left: 17%;
       box-shadow: rgba(5, 5, 5, 0) 0px 0px 0px;
       background-color: rgba(0, 0, 0, 0);
       color: rgb(255, 255, 255);
       
     }
   }
-  /* @keyframes AnimateText {
-      70%{
-          text-decoration: underline white;
-          text-shadow: 0px 0px 0px black;
-      }
-      100%{
-          text-decoration: underline black;
-         
-         
-      }
-
-  } */
