--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,8 @@
 .container{
+    display: flex;
+    flex-direction: row;
     width: 100vw;
-    height: 30vh;
+    height: 10vh;
     
 }
 .titleContainer{
@@ -9,18 +11,20 @@
     justify-content: center;
     align-items: center;
     width: 70vw;
-    height: 15vh;
-    margin: 2vh;
+    height: 12vh;
+    margin-top: 2vh;
     background-color: rgba(0, 0, 0, 0.462);
     box-shadow: 10px 10px 10px;
     animation: AnimateTitle 6s linear;
     animation-fill-mode: forwards;
     }
+
 .title{
     font-family: 'Cinzel', serif;
-    color: rgba(19, 1, 1, 0.814);
+    color: rgb(0, 0, 0);
     animation: AnimateText 7s linear;
     animation-fill-mode: forwards;
+    text-decoration: underline rgba(249, 220, 73, 0.832);
 
 }
 
@@ -56,21 +60,21 @@
     }
   
     45% {
-      margin-left: 17%;
+      margin-left: 15%;
       box-shadow: black 10px 10px 10px;
       background-color: rgba(0, 0, 0, 0.363);
       color: rgb(255, 255, 255);
     
     }
     70% {
-      margin-left: 17%;
+      margin-left: 15%;
       box-shadow: black 80px 80px 80px;
       background-color: rgba(0, 0, 0, 0.152);
       color: rgb(255, 255, 255);
     
     }
     100% {
-      margin-left: 17%;
+      margin-left: 15%;
       box-shadow: rgba(5, 5, 5, 0) 0px 0px 0px;
       background-color: rgba(0, 0, 0, 0);
       color: rgb(255, 255, 255);
