--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -1,18 +1,23 @@
 .container{
-    margin-top: 4vh;
-    margin-left: 8vw;
+    margin-top: 3vh;
+    margin-left: 4vw;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.218);
-    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0);
     height: 6vh;
     width: 3.2vw;
     padding: 0.3vw;
     border-radius: 5px;
-    border: 1px solid black;
-    box-shadow: 5px 5px 5px;
-    gap: 1vh;
+    border: 1px solid rgba(0, 0, 0, 0);
+  
+    gap: 0.8vh;
+}
+.bars{
+    height: 2vh;
+    width: 3.2vw;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0);
 }
 .container:hover{
   -webkit-animation: spin 4s linear ;
@@ -20,15 +25,33 @@
   animation: spin 4s linear ;
     background-color: rgba(240, 248, 255, 0.48);
 }
-.bars{
-    height: 2vh;
-    width: 3.2vw;
-    border-radius: 5px;
-    background-color: black;
-}
 
 @-webkit-keyframes spin {
     100%{
     -webkit-transform:rotate(360deg);
     }
 }
+
+
+@media screen and (max-width: 700px) {
+.container{
+    background-color: rgba(0, 0, 0, 0);
+    height: 4.5vh;
+    width: 5.5vw;
+    padding: 0.5vw;
+    border: 1px solid rgba(0, 0, 0, 0.859);
+    box-shadow: 5px 5px 5px;
+    cursor: pointer;
+    box-shadow: 5px 5px 5px;
+
+}
+.bars{
+    height: 1.8vh;
+    width: 5.5vw;
+    border-radius: 5px;
+    background-color: rgb(0, 0, 0);
+}
+  
+  }
+  
+  
