--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -1,5 +1,5 @@
 .container{
-    margin-top: 3vh;
+    margin-top: 4vh;
     margin-left: 4vw;
     display: flex;
     flex-direction: column;
@@ -8,7 +8,7 @@
     height: 6vh;
     width: 3.2vw;
     padding: 0.3vw;
-    border-radius: 5px;
+    border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0);
   
     gap: 0.8vh;
@@ -36,22 +36,35 @@
 @media screen and (max-width: 700px) {
 .container{
     background-color: rgba(0, 0, 0, 0);
-    height: 4.5vh;
-    width: 5.5vw;
+    height: 3.5vh;
+    width: 4.5vw;
     padding: 0.5vw;
     border: 1px solid rgba(0, 0, 0, 0.859);
     box-shadow: 5px 5px 5px;
     cursor: pointer;
-    box-shadow: 5px 5px 5px;
-
 }
 .bars{
-    height: 1.8vh;
-    width: 5.5vw;
+    height: 1vh;
+    width: 4.5vw;
     border-radius: 5px;
     background-color: rgb(0, 0, 0);
 }
-  
   }
   
-  
+  @media screen and (max-width:  500px) {
+    .container{
+        background-color: rgba(0, 0, 0, 0);
+        height: 2.5vh;
+        width: 6.5vw;
+        margin-left: 2vw;
+        padding: 1vw;
+        gap: 0.6vh;
+    }
+    .bars{
+        height: 1.6vh;
+        width: 6.5vw;
+        border-radius: 5px;
+        background-color: rgb(0, 0, 0);
+    }
+    
+  }
