--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,8 +2,8 @@
     display: flex;
     flex-direction: row;
     width: 100vw;
-    height: 10vh;
-    
+    height: 10vh; 
+  
 }
 .titleContainer{
     display: flex;
@@ -14,9 +14,11 @@
     height: 12vh;
     margin-top: 2vh;
     background-color: rgba(0, 0, 0, 0.462);
+    border-radius: 3px;
     box-shadow: 10px 10px 10px;
     animation: AnimateTitle 6s linear;
     animation-fill-mode: forwards;
+
     }
 
 .title{
@@ -25,7 +27,6 @@
     animation: AnimateText 7s linear;
     animation-fill-mode: forwards;
     text-decoration: underline rgba(249, 220, 73, 0.832);
-
 }
 
 @media screen and (max-width: 700px) {
@@ -34,10 +35,8 @@
     height: 10vh;
   }
   .title{
-    font-size: 1.4rem;
+   font-size: 1.4rem;
   }
-
-
 }
 
 @media screen and (max-width: 500px) {
@@ -51,9 +50,6 @@
 
 
 }
-
-
-
 @keyframes AnimateTitle {
     0% {
       background-color: rgba(0, 0, 0, 0.526);
