--- a/src/components/HamburgerMenu/HamburgerMenu.module.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.module.css
@@ -20,17 +20,17 @@
     background-color: rgba(0, 0, 0, 0);
 }
 .container:hover{
-  -webkit-animation: spin 4s linear ;
-  -moz-animation: spin 4s linear ;
-  animation: spin 4s linear ;
-    background-color: rgba(240, 248, 255, 0.48);
+  /* -webkit-animation: spin 2s linear infinite  ;
+  -moz-animation: spin 2s linear ; */
+  animation: spin 2s linear ;
+  background-color: rgba(240, 248, 255, 0.48);
 }
 
-@-webkit-keyframes spin {
+/* @-webkit-keyframes spin {
     100%{
     -webkit-transform:rotate(360deg);
     }
-}
+} */
 
 
 @media screen and (max-width: 700px) {
@@ -55,14 +55,14 @@
     .container{
         background-color: rgba(0, 0, 0, 0);
         height: 2.5vh;
-        width: 6.5vw;
+        width: 4.5vw;
         margin-left: 2vw;
-        padding: 1vw;
+        padding: vw;
         gap: 0.6vh;
     }
     .bars{
         height: 1.6vh;
-        width: 6.5vw;
+        width: 4.5vw;
         border-radius: 5px;
         background-color: rgb(0, 0, 0);
     }
