--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -13,7 +13,7 @@
 }
 .title{
     color: white;
-    text-decoration: underline;
+    text-decoration: underline 1px;
 }
 .label{
     color: white;
