--- a/src/components/Projects/ProjectNav.module.css
+++ b/src/components/Projects/ProjectNav.module.css
@@ -1,21 +1,22 @@
 .container{
     margin-top: 2vh;
-    margin-left: 40vw;
+    margin-left: 50.6vw;
     width: 12vw;
-    height: 12vh;
+    height: auto;
     background-color: rgba(0, 0, 0, 0.477);
     border-radius: 5px;
     border: solid black 1px;
     box-shadow: 10px 10px 10px;
 }
 .nav{
+    padding: 1vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 1vh;
 }
 .link{
-    margin-top: 1.5vh;
+    font-size: 1.1vw;
     color: white;
     text-decoration: 1px underline white;
 }
