--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -6,7 +6,8 @@
     align-items: center;
     width: 60vw;
     margin-top: 6vh;
-    height: 6vh;
+    height: auto;
+    padding: 1.2vh;
     box-shadow: 10px 10px 10px;
     border: 1px black solid;
     border-radius: 5px;
@@ -16,5 +17,6 @@
 .link{
     color: white;
     text-decoration: 1px underline white;
+    font-size: 1.1vw;
 }
 
