--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,11 +1,11 @@
 .container{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin: 0 auto;
     margin-top: 3vh;
     width: 70vw;
-    height: 70vh;
+    height: 75vh;
     background-color: rgba(0, 0, 0, 0.392);
     border-radius: 5px;
     border: solid black 1px;
@@ -13,5 +13,33 @@
 }
 .title{
     color: white;
-    text-decoration: underline;
+    text-decoration:  underline;
+}
+.form{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+.label{
+    margin-top: 2vh;
+    color: white;
+    
+
+}
+input{
+    border: 1px solid black;
+    box-shadow: 10px 10px 10px;
+}
+.textArea{
+    border: 1px solid black;
+    width: 30vw;
+    height: 40vh;
+    box-shadow: 10px 10px 10px;
+}
+.btn{
+    width: 10vw;
+    align-self: center;
+    margin-top: 2vh;
+    cursor: pointer;
+    box-shadow: 10px 10px 10px;
 }
