--- a/src/components/Tools/Tools.module.css
+++ b/src/components/Tools/Tools.module.css
@@ -12,6 +12,20 @@
     box-shadow: 10px 10px 10px;
 }
 .title{
+    font-size: 1.7vw;
+    margin: 0;
+    margin-top: 1vh;
+    margin-bottom: 1vh;
     color: white;
     text-decoration:  underline;
+}
+.text{
+    font-size: 1.2vw;
+    margin: 0;
+    margin-bottom: 1vh;
+    color: white;
+}
+.toolContainer{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 }
